Connect Data To DB, and Fix Some UI

--- a/WabiSabiTeamProject/Feature/AddProduct/View/AddProduct.storyboard
+++ b/WabiSabiTeamProject/Feature/AddProduct/View/AddProduct.storyboard
@@ -116,7 +116,7 @@
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="time" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="4NJ-Yf-qNa">
+                                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" translatesAutoresizingMaskIntoConstraints="NO" id="4NJ-Yf-qNa">
                                                 <rect key="frame" x="209" y="2.5" width="150" height="45"/>
                                                 <color key="tintColor" name="ColorPrimary"/>
                                                 <constraints>
@@ -150,7 +150,7 @@
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="time" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="xve-s2-EBN">
+                                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" translatesAutoresizingMaskIntoConstraints="NO" id="xve-s2-EBN">
                                                 <rect key="frame" x="209" y="2.5" width="150" height="45"/>
                                                 <color key="tintColor" name="ColorPrimary"/>
                                                 <constraints>
@@ -231,6 +231,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="closeButton" destination="xO3-uE-7s4" id="2XI-lD-HYS"/>
+                        <outlet property="expDatePicker" destination="xve-s2-EBN" id="ESM-1t-0TL"/>
                         <outlet property="imageViewProduct" destination="UAB-ij-Exv" id="5WI-an-VWN"/>
                         <outlet property="labelDateInformation" destination="75M-ud-U3v" id="ESD-fO-9TX"/>
                         <outlet property="labelExpiredDate" destination="RVh-7i-7AS" id="SgA-js-MCP"/>
@@ -238,6 +239,8 @@
                         <outlet property="labelProductBrand" destination="jff-nf-I9l" id="q05-vs-ACX"/>
                         <outlet property="labelProductName" destination="ac8-YM-wmd" id="dRP-IE-BYy"/>
                         <outlet property="labelProductType" destination="ACu-hO-93Z" id="ZS7-es-MUW"/>
+                        <outlet property="labelProductTypeValue" destination="o3l-eu-AMs" id="srG-n3-Tyr"/>
+                        <outlet property="paoDatePicker" destination="4NJ-Yf-qNa" id="xTx-NO-Kx9"/>
                         <outlet property="saveButton" destination="Zkn-Li-pxI" id="4RT-cl-S0r"/>
                         <outlet property="stackViewDateInformation" destination="SwH-Sn-wl6" id="EqK-w6-40W"/>
                         <outlet property="textfieldProductBrand" destination="04m-ZH-vVA" id="YBF-6b-sck"/>
@@ -246,7 +249,7 @@
                         <outlet property="viewExpiredDate" destination="Y88-gG-Kkp" id="jUQ-T2-lR6"/>
                         <outlet property="viewOpenDate" destination="Zzo-kP-9PO" id="V4U-RQ-lvc"/>
                         <outlet property="viewProductType" destination="ddk-Z0-Yoi" id="oZS-Fq-bHf"/>
-                        <segue destination="bkt-o0-pMV" kind="show" identifier="moveToProductTypeSelection" id="IH0-Xd-tuN"/>
+                        <segue destination="36m-kk-jkl" kind="show" identifier="moveToProductTypeSelection" id="IH0-Xd-tuN"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -275,14 +278,37 @@
                             <constraint firstItem="r1q-pb-FBJ" firstAttribute="top" secondItem="fJi-52-5tb" secondAttribute="top" id="YLY-t3-dNl"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Product Type" id="kgr-lX-e24"/>
+                    <navigationItem key="navigationItem" title="Product Type" id="kgr-lX-e24">
+                        <barButtonItem key="leftBarButtonItem" style="plain" id="LGw-XW-81n">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="K3v-La-kGM">
+                                <rect key="frame" x="20" y="5" width="92" height="34.5"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Back"/>
+                                <connections>
+                                    <action selector="backButtonPressed:" destination="bkt-o0-pMV" eventType="touchUpInside" id="YF8-ts-W2Q"/>
+                                </connections>
+                            </button>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" style="plain" id="fW3-xo-eOw">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="Fbe-M7-din">
+                                <rect key="frame" x="302" y="5" width="92" height="34.5"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Save"/>
+                                <connections>
+                                    <action selector="saveButtonPressed:" destination="bkt-o0-pMV" eventType="touchUpInside" id="TWL-uS-5Kf"/>
+                                </connections>
+                            </button>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="productTypeTableView" destination="r1q-pb-FBJ" id="y9c-8d-aBa"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="b2f-ex-pdw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2008.6956521739132" y="-419.19642857142856"/>
+            <point key="canvasLocation" x="2957.971014492754" y="79.6875"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Fdf-zE-xCD">
@@ -301,6 +327,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="waE-8e-jyS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="131.8840579710145" y="80.357142857142847"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Hhy-xW-Wfg">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="36m-kk-jkl" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" id="TIS-bJ-AZ2"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="zN5-dY-7iA">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="bkt-o0-pMV" kind="relationship" relationship="rootViewController" id="5Kb-iH-8fI"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Z1g-R3-QcL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2047.826086956522" y="79.6875"/>
         </scene>
     </scenes>
     <resources>
