--- a/WabiSabiTeamProject/Feature/Profile/View/ProductTableViewCell.xib
+++ b/WabiSabiTeamProject/Feature/Profile/View/ProductTableViewCell.xib
@@ -1,21 +1,92 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="ProductTableViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" restorationIdentifier="ProductTableViewCell" selectionStyle="default" indentationWidth="10" reuseIdentifier="ProductTableViewCell" rowHeight="100" id="KGk-i7-Jjw" customClass="ProductTableViewCell" customModule="WabiSabiTeamProject" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NWv-PI-SL1">
+                        <rect key="frame" x="10" y="10" width="75" height="80"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="+" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j71-h2-5mT">
+                                <rect key="frame" x="23.5" y="13" width="28" height="54"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="45"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBlueColor"/>
+                        <constraints>
+                            <constraint firstItem="j71-h2-5mT" firstAttribute="centerY" secondItem="NWv-PI-SL1" secondAttribute="centerY" id="Fuk-VG-lG2"/>
+                            <constraint firstItem="j71-h2-5mT" firstAttribute="centerX" secondItem="NWv-PI-SL1" secondAttribute="centerX" id="Qdc-nB-T0T"/>
+                            <constraint firstAttribute="width" constant="75" id="QtI-n6-NgV"/>
+                        </constraints>
+                    </view>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="u2n-NO-fJ2">
+                        <rect key="frame" x="95" y="29.5" width="186.5" height="41.5"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cUp-58-ted">
+                                <rect key="frame" x="0.0" y="0.0" width="186.5" height="20.5"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add your product" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EMN-lO-Rj2">
+                                <rect key="frame" x="0.0" y="25.5" width="186.5" height="16"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                    </stackView>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chevron.right" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="SqU-MS-Tbf">
+                        <rect key="frame" x="291.5" y="42" width="12.5" height="16.5"/>
+                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="12.5" id="6Fy-Sp-ugQ"/>
+                            <constraint firstAttribute="height" constant="20" id="s0o-0V-l5W"/>
+                        </constraints>
+                    </imageView>
+                </subviews>
+                <color key="backgroundColor" systemColor="systemGray4Color"/>
+                <constraints>
+                    <constraint firstItem="NWv-PI-SL1" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="0jo-SN-Sh7"/>
+                    <constraint firstItem="SqU-MS-Tbf" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="EY8-WE-FHy"/>
+                    <constraint firstAttribute="trailing" secondItem="SqU-MS-Tbf" secondAttribute="trailing" constant="16" id="Mxw-fI-pfm"/>
+                    <constraint firstItem="SqU-MS-Tbf" firstAttribute="leading" secondItem="u2n-NO-fJ2" secondAttribute="trailing" constant="10" id="Vai-Fh-rAO"/>
+                    <constraint firstItem="NWv-PI-SL1" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="cYO-c4-gh1"/>
+                    <constraint firstItem="u2n-NO-fJ2" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="e5l-YA-GVQ"/>
+                    <constraint firstItem="u2n-NO-fJ2" firstAttribute="leading" secondItem="NWv-PI-SL1" secondAttribute="trailing" constant="10" id="fFa-3I-Icd"/>
+                    <constraint firstAttribute="bottom" secondItem="NWv-PI-SL1" secondAttribute="bottom" constant="10" id="lQ5-KV-eVD"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="name" destination="cUp-58-ted" id="oSW-46-f2G"/>
+            </connections>
+            <point key="canvasLocation" x="137.68115942028987" y="75"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="chevron.right" catalog="system" width="96" height="128"/>
+        <systemColor name="systemBlueColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGray4Color">
+            <color red="0.81960784313725488" green="0.81960784313725488" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
